fix flight date issue
