# api/src/resources/flight/dto/get-flight.dto.ts
@@ -14,5 +14,9 @@ export class GetFlightDTO {
   @ApiPropertyOptional()
   @IsString()
   @IsOptional()
-  searchedDate?: string;
+  date?: string;
+
+  @ApiProperty()
+  @IsString()
+  timezone: string;
 }
